[package]
name = "nethint-userspace"
version = "0.1.0"
edition = "2018"

[build-dependencies]
[build-dependencies.cargo-bpf]
default-features = false
path = "../../redbpf/cargo-bpf"
features = ["build"]

[dependencies]
probes = { path = "../nethint-probes", package = "nethint-probes" }
libc = "0.2"
tokio = { version = "^1.0.1", features = ["rt", "signal", "time", "net", "sync"] }
redbpf = { path = "../../redbpf/redbpf", features = ["load"] }
futures = "0.3"
tracing = "0.1.26"
tracing-subscriber = "0.2.18"

[[bin]]
name = "nethint-user"
path = "src/main.rs"
