[package]
name = "nethint-userspace"
version = "0.1.0"
edition = "2018"

[build-dependencies]
[build-dependencies.cargo-bpf]
default-features = false
path = "../redbpf/cargo-bpf"
features = ["build"]

[dependencies]
probes = { path = "../nethint-probes", package = "nethint-probes" }
libc = "0.2"
tokio = { version = "^1.0.1", features = ["rt", "signal", "time", "net", "sync"] }
redbpf = { path = "../redbpf/redbpf", features = ["load"] }
futures = "0.3"
tracing = "0.1.26"
tracing-subscriber = "0.2.18"
anyhow = "1.0.38"
shell-words = "1.0.0"
nhagent_v2 = { path = "../../nethint-rs/src/nhagent_v2" }
nethint = { path = "../../nethint-rs/src/nethint/" }
serde = { version = "1.0.123", features = ["derive"] }
structopt = "0.3.21"

[[bin]]
name = "nethint-user"
path = "src/main.rs"
